[tool.poetry]
name = "chitanda"
version = "0.0.4"
description = "An extensible Discord & IRC bot."
authors = ["azuline <azuline@riseup.net>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/azuline/chitanda"

[tool.poetry.scripts]
chitanda = 'chitanda.__main__:run'

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
appdirs = "^1.4"
click = "^7.0"
"discord.py" = "^1.2"
gevent = "^1.4"
huey = "^1.10"
pydle = "^0.9.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
coveralls = "^1.8"
flake8 = "^3.7"
isort = "^4.3"
mock = "^3.0"
poetry-setup = "^0.3.6"
pytest = "^5.0"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.7"
sphinx_rtd_theme = "^0.4.3"

[tool.black]
line-length = 79
target-version = ['py37']
skip-string-normalization = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
