[tool.poetry]
name = "chitanda"
version = "0.0.5"
description = "An extensible Discord & IRC bot."
authors = ["azuline <azuline@riseup.net>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/azuline/chitanda"

[tool.poetry.scripts]
chitanda = 'chitanda.__main__:run'

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
appdirs = "^1.4"
click = "^7.0"
"discord.py" = "^1.2"
pydle = "^0.9.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.0"
pytest-cov = "^2.7"
sphinx_rtd_theme = "^0.4.3"
sphinx = "^3.3.0"
isort = "^5.6.4"
black = "^20.8b1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
